--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
             <a href = "">Sign Up/Login</a>
         </nav>
     </header>
+    <section>
+        <img src = "https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"/>
+    </section>
     <footer>
         <nav>
             <a href = "">Home</a>
