added wording to the marketing page, as well as linked up the css, and the home and about me pages.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "css/index.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <header>
+        <h1>Wet My Plants</h1>
         <nav>
-            <a href = "">Home</a>
-            <a href = "">About</a>
+            <a href = "index.html">Home</a>
+            <a href = "about.html">About</a>
             <a href = "">Sign Up/Login</a>
         </nav>
     </header>
     <section>
-        <img src = "https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"/>
+        <div>
+            <img src = "https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"/>
+        </div>
+        <div>
+            <p>Have you ever walked by your plants and said, "I really need to water those, I'll do it later."?</p>
+            <p>I know I have, and guess what? Later comes and we forget to water those plants.</p>
+            <p>Well our application is here to help!</p>
+            <p>Here at Wet My Plants we believe every plant life matters, especially the ones we keep in our homes! We help you set up reminders to water those precious plants of yours! We also allow you to keep track of all your plants, past and present, in order on our Plant Page! Our Plant Page helps you see which plants you have recently watered and which ones still need to be watered!</p>
+        </div>
     </section>
     <footer>
         <nav>
-            <a href = "">Home</a>
-            <a href = "">About</a>
+            <a href = "index.html">Home</a>
+            <a href = "about.html">About</a>
             <a href = "">Sign Up/Login</a>
         </nav>
     </footer>
