--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "css/index.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -8,8 +9,8 @@
 <body>
     <header>
         <nav>
-            <a href = "">Home</a>
-            <a href = "">About</a>
+            <a href = "index.html">Home</a>
+            <a href = "about.html">About</a>
             <a href = "">Sign Up/Login</a>
         </nav>
     </header>
@@ -18,8 +19,8 @@
     </section>
     <footer>
         <nav>
-            <a href = "">Home</a>
-            <a href = "">About</a>
+            <a href = "index.html">Home</a>
+            <a href = "about.html">About</a>
             <a href = "">Sign Up/Login</a>
         </nav>
     </footer>
