--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <a href = "">Sign Up/Login</a>
         </nav>
     </header>
-    <section>
+    <section class = "markBody">
         <div>
-            <img src = "https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"/>
+            <img src = ""/>
         </div>
         <div>
             <p>Have you ever walked by your plants and said, "I really need to water those, I'll do it later."?</p>
