added photos and background image to about page

--- a/about.html
+++ b/about.html
@@ -15,8 +15,47 @@
             <a href = "">Sign Up/Login</a>
         </nav>
     </header>
-    <section>
-        <img src = "https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"/>
+    <section class = "aboutBody">
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W013WPJS9GE-3b33d986ae3f-512"/>
+            <h2>Alex Williams</h2>
+            <h3>React 1</h3>
+        </div>
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W012H6TNRJR-48eacaac7727-512"/>
+            <h2>Drew Ross</h2>
+            <h3>React 2</h3>
+        </div>
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W012BRSAYLE-5081f42a7ab5-512"/>
+            <h2>Liam Cox</h2>
+            <h3>Back End</h3>
+        </div>
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W012K5N4GNP-d10bea7865ee-512"/>
+            <h2>Lynda Santiago</h2>
+            <h3>React 1</h3>
+        </div>
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W015QHDJ91Q-4514f619d5ad-512"/>
+            <h2>Sara Cearc</h2>
+            <h3>Marketing</h3>
+        </div>
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W012JQ3DW83-e13ec81b029d-512"/>
+            <h2>Andrew Sitzes</h2>
+            <h3>Back End</h3>
+        </div>
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W0138D8CX0Q-a7076291a0cf-512"/>
+            <h2>Tiffany Arellano</h2>
+            <h3>Project Lead</h3>
+        </div>
+        <div>
+            <img src = "https://ca.slack-edge.com/ESZCHB482-W012X6Y7PQR-3218fdde09f5-512"/>
+            <h2>Taja House</h2>
+            <h3>Project Lead</h3>
+        </div>
     </section>
     <footer>
         <nav>
