added media tag to css

--- a/about.html
+++ b/about.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <header>
+        <h1>Wet My Plants</h1>
         <nav>
             <a href = "index.html">Home</a>
             <a href = "about.html">About</a>
             <a href = "">Sign Up/Login</a>
         </nav>
     </header>
+       
     <section class = "aboutBody">
+        <h2 class = "title">About Our Creators</h2>
         <div>
             <img src = "https://ca.slack-edge.com/ESZCHB482-W013WPJS9GE-3b33d986ae3f-512"/>
             <h2>Alex Williams</h2>
