--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <section class = "markBody">
-        <h2>How Our Site Works</h2>
+        <h2>What Our Site Does</h2>
         <div>
             <img src = "https://images.unsplash.com/photo-1462530348824-65844534c0ed?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"/>
         </div>
