added to the styling of the about page, and made marketing page and about page responsive

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
        
     <section class = "aboutBody">
         <h2 class = "title">About Our Creators</h2>
+        <section class = "imgContainer">
         <div>
             <img src = "https://ca.slack-edge.com/ESZCHB482-W013WPJS9GE-3b33d986ae3f-512"/>
             <h2>Alex Williams</h2>
@@ -59,6 +60,7 @@
             <h2>Taja House</h2>
             <h3>Project Lead</h3>
         </div>
+    </section>
     </section>
     <footer>
         <nav>
