edited the link to login

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <nav>
             <a href = "index.html">Home</a>
             <a href = "about.html">About</a>
-            <a href = "https://wetmyplants-1.netlify.app/login">Sign Up/Login</a>
+            <a href = "https://wetmyplants-1.netlify.app">Sign Up/Login</a>
         </nav>
     </header>
        
