--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
     <header>
         <h1>Wet My Plants</h1>
         <nav>
-            <a href = "index.html">Home</a>
-            <a href = "about.html">About</a>
-            <a href = "https://wetmyplants-1.netlify.app">Sign Up/Login</a>
+            <a href = "index.html" alt = "Home page">Home</a>
+            <a href = "about.html" alt = "About page">About</a>
+            <a href = "https://wetmyplants-1.netlify.app" alt = "Sign in or sign up page">Sign Up/Login</a>
         </nav>
     </header>
        
@@ -64,9 +64,9 @@
     </section>
     <footer>
         <nav>
-            <a href = "index.html">Home</a>
-            <a href = "about.html">About</a>
-            <a href = "">Sign Up/Login</a>
+            <a href = "index.html" alt = "Home page">Home</a>
+            <a href = "about.html" alt = "About page">About</a>
+            <a href = "https://wetmyplants-1.netlify.app" alt = "Sign in or sign up page">Sign Up/Login</a>
         </nav>
     </footer>
 </body>
