--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
         <h1>Wet My Plants</h1>
         <nav>
-            <a href = "index.html">Home</a>
-            <a href = "about.html">About</a>
-            <a href = "https://wetmyplants-1.netlify.app">Sign Up/Login</a>
+            <a href = "index.html" alt = "Home page">Home</a>
+            <a href = "about.html" alt = "About page">About</a>
+            <a href = "https://wetmyplants-1.netlify.app" alt = "Sign in or sign up page">Sign Up/Login</a>
         </nav>
     </header>
     <section class = "markBody">
         <h2>What Our Site Does</h2>
         <div>
-            <img src = "https://images.unsplash.com/photo-1462530348824-65844534c0ed?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"/>
+            <img src = "https://images.unsplash.com/photo-1462530348824-65844534c0ed?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt = "potted plants in a green house"/>
         </div>
         <div>
             <p>Have you ever walked by your plants and said, "I really need to water those, I'll do it later."?</p>
@@ -30,9 +30,9 @@
     </section>
     <footer>
         <nav>
-            <a href = "index.html">Home</a>
-            <a href = "about.html">About</a>
-            <a href = "">Sign Up/Login</a>
+            <a href = "index.html" alt = "Home page">Home</a>
+            <a href = "about.html" alt = "About page">About</a>
+            <a href = "https://wetmyplants-1.netlify.app" alt = "Sign in or sign up page">Sign Up/Login</a>
         </nav>
     </footer>
 </body>
